--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -42,7 +42,7 @@ foreground pipeline. ❌
 	◦ ctrl-\ does nothing. ❌
 
 • Your shell must implement the following builtins: ❌
-	◦ echo with option -n ❌
+	◦ echo with option -n ✔️
 	◦ cd with only a relative or absolute path ❌
 	◦ pwd with no options ❌
 	◦ export with no options ❌
