--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -44,8 +44,8 @@ foreground pipeline. ❌
 • Your shell must implement the following builtins: ❌
 	◦ echo with option -n ✔️
 	◦ cd with only a relative or absolute path ❌
-	◦ pwd with no options ❌
+	◦ pwd with no options ✔️
 	◦ export with no options ❌
 	◦ unset with no options ❌ 
-	◦ env with no options or arguments ❌
+	◦ env with no options or arguments ✔️
 	◦ exit with no options ❌
