--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -19,14 +19,14 @@ subject such as \ (backslash) or ; (semicolon). ❌
 in the quoted sequence except for $ (dollar sign). ❌
 
 • Implement redirections: ❌
-	◦ < should redirect input. ❌
-	◦ > should redirect output. ❌
+	◦ < should redirect input. ✅❗ // Prototype works for now
+	◦ > should redirect output. ✅❗ // Prototype works for now
 	◦ << should be given a delimiter, then read the input until a line containing the
 	delimiter is seen. However, it doesn’t have to update the history! ❌
 	◦ >> should redirect output in append mode ❌
 
 • Implement pipes (| character). The output of each command in the pipeline is
-connected to the input of the next command via a pipe. ❌
+connected to the input of the next command via a pipe. ✅❗ // Prototype works for now
 
 • Handle environment variables ($ followed by a sequence of characters) which
 should expand to their values. ❌
