Added support for readline functions on mac(hopefully it works)

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -8,10 +8,10 @@ What to do and various notes ✅
 relative or an absolute path). ❌
 
 • Not use more than one global variable. Think about it. You will have to explain
-its purpose ❌
+its purpose ✅❗ // exit status
 
 • Not interpret unclosed quotes or special characters which are not required by the
-subject such as \ (backslash) or ; (semicolon). ❌
+subject such as \ (backslash) or ; (semicolon). ✅
 
 • Handle ’ (single quote) which should prevent the shell from interpreting the metacharacters in the quoted sequence. ❌
 
@@ -23,7 +23,7 @@ in the quoted sequence except for $ (dollar sign). ❌
 	◦ > should redirect output. ✅❗ // Prototype works for now
 	◦ << should be given a delimiter, then read the input until a line containing the
 	delimiter is seen. However, it doesn’t have to update the history! ❌
-	◦ >> should redirect output in append mode ❌
+	◦ >> should redirect output in append mode ✅❗ // Prototype works for now
 
 • Implement pipes (| character). The output of each command in the pipeline is
 connected to the input of the next command via a pipe. ✅❗ // Prototype works for now
