--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -5,10 +5,10 @@ What to do and various notes ✅
 • Have a working history. ✅❗ Not sure if we need to make a copy like bash. Check later// Fix mac issue later
 
 • Search and launch the right executable (based on the PATH variable or using a
-relative or an absolute path). ❌
+relative or an absolute path). ✅❗ // protoype works for now
 
 • Not use more than one global variable. Think about it. You will have to explain
-its purpose ✅❗ // exit status
+its purpose ✅❗ // exit status has to be done but we only have 1
 
 • Not interpret unclosed quotes or special characters which are not required by the
 subject such as \ (backslash) or ; (semicolon). ✅
